--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
 							</ul>
 						</nav>
 						<div class="header_extra d-flex flex-row align-items-center justify-content-start ml-auto">
-							<div class="phone d-flex flex-row align-items-center justify-content-start"><i class="fa fa-phone" aria-hidden="true"></i><span>652-345 3222 11</span></div>
+							<div class="phone d-flex flex-row align-items-center justify-content-start"><i class="fa fa-phone" aria-hidden="true"></i><span>+961 1 220 230</span></div>
 							<div class="book_button trans_200"><a href="#">Book Now</a></div>
 						</div>
 						<div class="hamburger ml-auto"><i class="fa fa-bars" aria-hidden="true"></i></div>
@@ -179,9 +179,9 @@
 					<div class="intro_right_content">
 						<div class="section_title_container text-center">
 							<div class="section_title"><h1>Beach Hotel - More than a stay</h1></div>
-							<div class="section_text">In vitae nisi aliquam, scelerisque leo a, volutpat sem. Vivamus rutrum dui fermentum eros hendrerit, id lobortis leo volutpat. Maecenas sollicitudin est in libero pretium interdum.</div>
+							<div class="section_text">Welcome to the Blue Moon Hotel, where every stay is more than just a stay. From our luxurious amenities to our personalized service, we go above and beyond to make sure that your time with us is nothing short of exceptional.</div>
 						</div>
-						<div class="intro_right_text text-center">In vitae nisi aliquam, scelerisque leo a, volutpat sem. Vivamus rutrum dui fermentum eros hendrerit, id lobortis leo volutpat. Maecenas sollicitudin est in libero pretium interdum. Nullam volutpat dui sem, ac congue purus hendrerit, id lobortis leo luctus nec. In vitae nisi aliquam, scelerisque. Vivamus rutrum dui fermentum eros hendrerit, id lobortis leo volutpat. Maecenas sollicitudin est in libero pretium interdum. Nullam volutpat dui sem, ac congue purus hendrerit, id lobortis leo luctus nec. </div>
+						<div class="intro_right_text text-center">Welcome to Blue Moon Hotel, where luxury and comfort are at the heart of everything we do. From the moment you arrive, our team of dedicated staff are committed to providing you with a personalized and unforgettable experience. Our stunning rooms offer the perfect blend of style and comfort, while our exceptional amenities, including our spa, fitness center, and fine dining restaurant, ensure that every moment of your stay is truly indulgent. Whether you're here for business or pleasure, we're dedicated to making your time with us exceptional, and we look forward to welcoming you to our hotel.</div>
 						<div class="sig text-center">
 							<img src="images/sig.png" alt="">
 						</div>
@@ -203,7 +203,7 @@
 					<div class="intro_left_content">
 						<div class="section_title_container text-center">
 							<div class="section_title"><h1>Amazing Facilities</h1></div>
-							<div class="section_text">In vitae nisi aliquam, scelerisque leo a, volutpat sem. Vivamus rutrum dui fermentum eros hendrerit, id lobortis leo volutpat. Maecenas sollicitudin est in libero pretium interdum.</div>
+							<div class="section_text">Experience the ultimate in luxury and comfort at Blue Moon Hotel, with a range of amazing facilities designed to help you unwind, stay active, and make the most of your stay.</div>
 						</div>
 						<div class="row icon_box_row">
 
@@ -213,7 +213,7 @@
 									<div class="icon_box_icon"><img src="images/icon_1.svg" alt="https://www.flaticon.com/authors/monkik"></div>
 									<div class="icon_box_title"><h3>Beautiful Rooms</h3></div>
 									<div class="icon_box_text">
-										<p>In vitae nisi aliquam, scelerisque leo a, volutpat sem. Vivamus rutrum.</p>
+										<p>Our rooms are designed with a focus on elegance and comfort, featuring luxurious amenities and stunning decor to make your stay unforgettable.</p>
 									</div>
 								</div>
 							</div>
@@ -224,7 +224,7 @@
 									<div class="icon_box_icon"><img src="images/icon_2.svg" alt="https://www.flaticon.com/authors/monkik"></div>
 									<div class="icon_box_title"><h3>Swimming Pool</h3></div>
 									<div class="icon_box_text">
-										<p>Maecenas sollicitudin est in libero pretium interdum.In vitae nisi.</p>
+										<p>Our outdoor pool is a refreshing oasis, with crystal-clear waters and comfortable loungers for soaking up the sun.</p>
 									</div>
 								</div>
 							</div>
@@ -235,7 +235,7 @@
 									<div class="icon_box_icon"><img src="images/icon_3.svg" alt="https://www.flaticon.com/authors/monkik"></div>
 									<div class="icon_box_title"><h3>Luxury Resort</h3></div>
 									<div class="icon_box_text">
-										<p>In vitae nisi aliquam, scelerisque leo a, volutpat sem. Vivamus rutrum.</p>
+										<p>Our spa and wellness center offers a range of treatments and facilities for relaxation and rejuvenation, including massages, saunas, and a fitness center.</p>
 									</div>
 								</div>
 							</div>
@@ -327,7 +327,7 @@
 				<div class="col-lg-6">
 					<div class="newsletter_content">
 						<div class="newsletter_text">
-							<p>In vitae nisi aliquam, scelerisque leo a, volutpat sem. Vivamus rutrum dui fermentum eros hendrerit, id lobortis leo volutpat. Maecenas sollicitudin est in libero pretium interdum.</p>
+							<p>Stay up-to-date on the latest news, exclusive offers, and upcoming events at Blue Moon Hotel by subscribing to our newsletter. Get insider access to our luxury accommodations, exceptional dining experiences, and indulgent amenities, as well as special promotions and packages. Sign up today and be the first to know about everything that's happening at our hotel.</p>
 						</div>
 					</div>
 				</div>
@@ -372,15 +372,15 @@
 							<ul class="contact_info_list">
 								<li class="d-flex flex-row align-items-start justify-content-start">
 									<div><div class="contact_info_icon d-flex flex-column align-items-center justify-content-center"><img src="images/placeholder.png" alt=""></div></div>
-									<div class="contact_info_text">1481 Creekside Lane Avila Beach, CA 931</div>
+									<div class="contact_info_text">Al Akhtal Al Saghir, Beirut 0011 7791</div>
 								</li>
 								<li class="d-flex flex-row align-items-center justify-content-start">
 									<div><div class="contact_info_icon d-flex flex-column align-items-center justify-content-center"><img src="images/smartphone.png" alt=""></div></div>
-									<div class="contact_info_text">+53 345 7953 32453</div>
+									<div class="contact_info_text">+961 1 220 230</div>
 								</li>
 								<li class="d-flex flex-row align-items-center justify-content-start">
 									<div><div class="contact_info_icon d-flex flex-column align-items-center justify-content-center"><img src="images/mail.png" alt=""></div></div>
-									<div class="contact_info_text">yourmail@gmail.com</div>
+									<div class="contact_info_text">contact@bluemoonhotel.com</div>
 								</li>
 							</ul>
 						</div>
@@ -393,7 +393,7 @@
 					<div class="contact_form_container">
 						<div class="section_title_container_2">
 							<div class="section_title"><h1>Contact Info</h1></div>
-							<div class="section_text">Vivamus rutrum dui fermentum eros hendrerit, id lobortis leo volutpat. Maecenas sollicitudin est in libero pretium interdum.</div>
+							<div class="section_text">Need to get in touch with us? Whether you have a question, comment or need assistance with your reservation, our team is here to help. You can reach us by phone, email, or simply fill out the contact form below. We look forward to hearing from you and assisting you in any way we can.</div>
 						</div>
 						<form action="#" class="contact_form" id="contact_form">
 							<div class="row contact_row">
