--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
 							</ul>
 						</nav>
 						<div class="header_extra d-flex flex-row align-items-center justify-content-start ml-auto">
-							<div class="phone d-flex flex-row align-items-center justify-content-start"><i class="fa fa-phone" aria-hidden="true"></i><span>652-345 3222 11</span></div>
+							<div class="phone d-flex flex-row align-items-center justify-content-start"><i class="fa fa-phone" aria-hidden="true"></i><span>+961 1 220 230</span></div>
 							<div class="book_button trans_200"><a href="#">Book Now</a></div>
 						</div>
 						<div class="hamburger ml-auto"><i class="fa fa-bars" aria-hidden="true"></i></div>
@@ -179,21 +179,21 @@
 							</div>
 						</div>
 						<div class="contact_section_text">
-							<p>In vitae nisi aliquam, scelerisque leo a, volutpat sem. Vivamus rutrum dui fermentum eros hendrerit, id lobortis leo volutpat. Maecenas sollicitudin est in libero pretium interdum.</p>
+							<p>"Experience luxury and comfort in the heart of Beirut at the Blue Moon Hotel. Our prime location offers easy access to the city's top attractions, vibrant nightlife, and stunning coastline, making it the perfect base for your next trip to Lebanon.</p>
 						</div>
 						<div class="contact_section_info">
 							<ul>
 								<li class="d-flex flex-row align-items-center justify-content-start">
 									<div><div class="d-flex flex-column align-items-center justify-content-center"><img src="images/icon_1.png" alt=""></div></div>
-									<div>1481 Creekside Lane Avila Beach, CA 931</div>
+									<div>Al Akhtal Al Saghir, Beirut 0011 7791</div>
 								</li>
 								<li class="d-flex flex-row align-items-center justify-content-start">
 									<div><div class="d-flex flex-column align-items-center justify-content-center"><img src="images/icon_2.png" alt=""></div></div>
-									<div>+53 345 7953 32453</div>
+									<div>+961 1 220 230</div>
 								</li>
 								<li class="d-flex flex-row align-items-center justify-content-start">
 									<div><div class="d-flex flex-column align-items-center justify-content-center"><img src="images/icon_3.png" alt=""></div></div>
-									<div>yourmail@gmail.com</div>
+									<div>contact@bluemoonhotel.com</div>
 								</li>
 							</ul>
 						</div>
@@ -225,7 +225,7 @@
 				<div class="col-lg-6">
 					<div class="newsletter_content">
 						<div class="newsletter_text">
-							<p>In vitae nisi aliquam, scelerisque leo a, volutpat sem. Vivamus rutrum dui fermentum eros hendrerit, id lobortis leo volutpat. Maecenas sollicitudin est in libero pretium interdum.</p>
+							<p>Stay up-to-date on the latest news, exclusive offers, and upcoming events at Blue Moon Hotel by subscribing to our newsletter. Get insider access to our luxury accommodations, exceptional dining experiences, and indulgent amenities, as well as special promotions and packages. Sign up today and be the first to know about everything that's happening at our hotel.</p>
 						</div>
 					</div>
 				</div>
@@ -270,15 +270,15 @@
 							<ul class="contact_info_list">
 								<li class="d-flex flex-row align-items-start justify-content-start">
 									<div><div class="contact_info_icon d-flex flex-column align-items-center justify-content-center"><img src="images/placeholder.png" alt=""></div></div>
-									<div class="contact_info_text">1481 Creekside Lane Avila Beach, CA 931</div>
+									<div class="contact_info_text">Al Akhtal Al Saghir, Beirut 0011 7791</div>
 								</li>
 								<li class="d-flex flex-row align-items-center justify-content-start">
 									<div><div class="contact_info_icon d-flex flex-column align-items-center justify-content-center"><img src="images/smartphone.png" alt=""></div></div>
-									<div class="contact_info_text">+53 345 7953 32453</div>
+									<div class="contact_info_text">+961 1 220 230</div>
 								</li>
 								<li class="d-flex flex-row align-items-center justify-content-start">
 									<div><div class="contact_info_icon d-flex flex-column align-items-center justify-content-center"><img src="images/mail.png" alt=""></div></div>
-									<div class="contact_info_text">yourmail@gmail.com</div>
+									<div class="contact_info_text">contact@bluemoonhotel.com</div>
 								</li>
 							</ul>
 						</div>
@@ -291,7 +291,7 @@
 					<div class="contact_form_container">
 						<div class="section_title_container_2">
 							<div class="section_title"><h1>Contact Info</h1></div>
-							<div class="section_text">Vivamus rutrum dui fermentum eros hendrerit, id lobortis leo volutpat. Maecenas sollicitudin est in libero pretium interdum.</div>
+							<div class="section_text">Need to get in touch with us? Whether you have a question, comment or need assistance with your reservation, our team is here to help. You can reach us by phone, email, or simply fill out the contact form below. We look forward to hearing from you and assisting you in any way we can.</div>
 						</div>
 						<form action="#" class="contact_form" id="contact_form">
 							<div class="row contact_row">
