--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							</ul>
 						</nav>
 						<div class="header_extra d-flex flex-row align-items-center justify-content-start ml-auto">
-							<div class="phone d-flex flex-row align-items-center justify-content-start"><i class="fa fa-phone" aria-hidden="true"></i><span>652-345 3222 11</span></div>
+							<div class="phone d-flex flex-row align-items-center justify-content-start"><i class="fa fa-phone" aria-hidden="true"></i><span>+961 1 220 230</span></div>
 							<div class="book_button trans_200"><a href="#">Book Now</a></div>
 						</div>
 						<div class="hamburger ml-auto"><i class="fa fa-bars" aria-hidden="true"></i></div>
@@ -77,7 +77,7 @@
 					<div class="col">
 						<div class="home_content text-center">
 							<div class="home_title"><h1>Luxury & Comfort</h1></div>
-							<div class="home_text">In vitae nisi aliquam, scelerisque leo a, volutpat sem. Vivamus rutrum dui fermentum eros hendrerit, id lobortis leo volutpat. Maecenas sollicitudin est in libero pretium interdum.</div>
+							<div class="home_text">Experience a world of luxury at Blue Moon Hotel, with stunning rooms, exceptional service, and indulgent amenities like our spa and fine dining restaurant. We're dedicated to providing personalized comfort that exceeds your expectations, and ensures your stay is truly unforgettable.</div>
 						</div>
 					</div>
 				</div>
@@ -170,7 +170,7 @@
 				<div class="col">
 					<div class="section_title_container text-center">
 						<div class="section_title"><h1>Blue Moon Hotel- More than a stay</h1></div>
-						<div class="section_text">In vitae nisi aliquam, scelerisque leo a, volutpat sem. Vivamus rutrum dui fermentum eros hendrerit, id lobortis leo volutpat. Maecenas sollicitudin est in libero pretium interdum.</div>
+						<div class="section_text">Welcome to the Blue Moon Hotel, where every stay is more than just a stay. From our luxurious amenities to our personalized service, we go above and beyond to make sure that your time with us is nothing short of exceptional.</div>
 					</div>
 				</div>
 			</div>
@@ -186,12 +186,12 @@
 					<div class="intro_content">
 						<div class="quote"><img src="images/quote.png" alt=""></div>
 						<div class="intro_text">
-							<p>In vitae nisi aliquam, scelerisque leo a, volutpat sem. Vivamus rutrum dui fermentum eros hendrerit, id lobortis leo volutpat. Maecenas sollicitudin est in libero pretium interdum. Nullam volutpat dui sem, ac congue purus hendrerit, id lobortis leo luctus nec.</p>
+							<p>My stay at the Blue Moon Hotel was exceptional. The staff provided personalized service that made me feel like a VIP throughout my stay. The room was stunning and the spa and wellness center were top-notch. The food at the restaurant was simply amazing, with great variety and flavors. Overall, I highly recommend this hotel for an unforgettable experience.</p>
 						</div>
 						<div class="intro_author d-flex flex-row align-items-center justify-content-start">
 							<div class="author_image"><img src="images/author_1.jpg" alt="https://unsplash.com/@onurozkardes"></div>
 							<div class="intro_author_content">
-								<div class="intro_author_name">Michael Williams</div>
+								<div class="intro_author_name">Ahmad Mokdad</div>
 								<div class="intro_author_title">client</div>
 							</div>
 						</div>
@@ -260,7 +260,7 @@
 						<div class="icon_box_icon"><img src="images/icon_1.svg" alt="https://www.flaticon.com/authors/monkik"></div>
 						<div class="icon_box_title"><h2>Beautiful Rooms</h2></div>
 						<div class="icon_box_text">
-							<p>In vitae nisi aliquam, scelerisque leo a, volutpat sem. Vivamus rutrum dui fermentum eros hendrerit, id lobortis leo volutpat.</p>
+							<p>Our rooms are designed with a focus on elegance and comfort, featuring luxurious amenities and stunning decor to make your stay unforgettable.</p>
 						</div>
 					</div>
 				</div>
@@ -269,9 +269,9 @@
 				<div class="col-lg-4">
 					<div class="icon_box text-center">
 						<div class="icon_box_icon"><img src="images/icon_2.svg" alt="https://www.flaticon.com/authors/monkik"></div>
-						<div class="icon_box_title"><h2>Swimming Pool</h2></div>
+						<div class="icon_box_title"><h2>Delicious Food</h2></div>
 						<div class="icon_box_text">
-							<p>In vitae nisi aliquam, scelerisque leo a, volutpat sem. Vivamus rutrum dui fermentum eros hendrerit, id lobortis leo volutpat.</p>
+							<p>Indulge in delicious cuisine served by top restaurants at the Blue Moon Hotel. Our menu features a range of flavorful dishes made with fresh, local ingredients, sure to satisfy even the most discerning palates. From breakfast to dinner, we offer a dining experience that's second to none.</p>
 						</div>
 					</div>
 				</div>
@@ -280,9 +280,9 @@
 				<div class="col-lg-4">
 					<div class="icon_box text-center">
 						<div class="icon_box_icon"><img src="images/icon_3.svg" alt="https://www.flaticon.com/authors/monkik"></div>
-						<div class="icon_box_title"><h2>Luxury Resort</h2></div>
+						<div class="icon_box_title"><h2>Gym & Spa</h2></div>
 						<div class="icon_box_text">
-							<p>In vitae nisi aliquam, scelerisque leo a, volutpat sem. Vivamus rutrum dui fermentum eros hendrerit, id lobortis leo volutpat.</p>
+							<p>Revitalize your body and mind at the Blue Moon Hotel's gym and spa. Our state-of-the-art facilities offer everything you need to stay fit and relaxed, from cardio machines and weights to massages and beauty treatments. Treat yourself to a rejuvenating experience that will leave you feeling refreshed and energized.</p>
 						</div>
 					</div>
 				</div>
