--- a/rooms.html
+++ b/rooms.html
@@ -38,9 +38,10 @@
 								<li class="active"><a href="rooms.html">Rooms</a></li>
 								<li><a href="blog.html">News</a></li>
 								<li><a href="contact.html">Contact</a></li>
+								<li><a href="profile.html">Profile</a></li>
 							</ul>
 						</nav>
-						<div class="header_extra d-flex flex-row align-items-center justify-content-start ml-auto">
+						<div class="header_extra d-flex flex-row align-items-center justify-content-start ml-auto">&nbsp;&nbsp;&nbsp;&nbsp;
 							<div class="phone d-flex flex-row align-items-center justify-content-start"><i class="fa fa-phone" aria-hidden="true"></i><span>+961 1 220 230</span></div>
 							<div class="book_button trans_200"><a href="#">Book Now</a></div>
 						</div>
@@ -62,6 +63,7 @@
 				<li><a href="rooms.html">Rooms</a></li>
 				<li><a href="news.html">News</a></li>
 				<li><a href="contact.html">Contact</a></li>
+				<li><a href="profile.html">Profile</a></li>
 			</ul>
 			<div class="menu_review"><a href="#">Book Now</a></div>
 		</div>
